syntax = "proto3";

package orders.v1;
option go_package = "gitlab.com/sample_projects/technonext-assessment/gen/orders/v1;ordersv1";

import "google/api/annotations.proto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token_type = 1;
  int64  expires_in = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message LogoutRequest {}
message LogoutResponse {
  string message = 1;
  string type = 2;
  int32 code = 3;
}

message CreateOrderRequest {
  int64 store_id = 1;
  string merchant_order_id = 2;
  string recipient_name = 3;
  string recipient_phone = 4;
  string recipient_address = 5;
  int32 recipient_city = 6;
  int32 recipient_zone = 7;
  int32 recipient_area = 8;
  int32 delivery_type = 9;
  int32 item_type = 10;
  string special_instruction = 11;
  int32 item_quantity = 12;
  double item_weight = 13;
  double amount_to_collect = 14;
  string item_description = 15;
}

message CreateOrderResponse {
  string message = 1;
  string type = 2;
  int32 code = 3;
  OrderData data = 4;
  map<string, ErrorList> errors = 5;
}

message ErrorList {
  repeated string messages = 1;
}

message OrderData {
  string consignment_id = 1;
  string merchant_order_id = 2;
  string order_status = 3;
  double delivery_fee = 4;
}

message ListOrdersRequest {
  int32 transfer_status = 1;
  int32 archive = 2;
  int32 limit = 3;
  int32 page = 4;
}

message Order {
  string order_consignment_id = 1;
  string order_created_at = 2;
  string order_description = 3;
  string merchant_order_id = 4;
  string recipient_name = 5;
  string recipient_address = 6;
  string recipient_phone = 7;
  double order_amount = 8;
  double total_fee = 9;
  string instruction = 10;
  int32 order_type_id = 11;
  double cod_fee = 12;
  double promo_discount = 13;
  double discount = 14;
  double delivery_fee = 15;
  string order_status = 16;
  string order_type = 17;
  string item_type = 18;
}

message ListOrdersResponse {
  string message = 1;
  string type = 2;
  int32 code = 3;
  PagedOrders data = 4;
}

message PagedOrders {
  repeated Order data = 1;
  int32 total = 2;
  int32 current_page = 3;
  int32 per_page = 4;
  int32 total_in_page = 5;
  int32 last_page = 6;
}

message CancelOrderRequest {
  string consignment_id = 1;
}

message GenericResponse {
  string message = 1;
  string type = 2;
  int32 code = 3;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/logout"
      body: "*"
    };
  }
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/orders"
      body: "*"
    };
  }

  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders/all"
      additional_bindings: {
        get: "/api/v1/orders/all/{transfer_status}/{archive}/{limit}/{page}"
      }
    };
  }

  rpc CancelOrder(CancelOrderRequest) returns (GenericResponse) {
    option (google.api.http) = {
      put: "/api/v1/orders/{consignment_id}/cancel"
    };
  }
}
